test/correct/Reexport.hs
module Reexport where

import Reexport2

main :: Int
main = y
