test/typeerrors/Heuristics/FBHasTooMany2.hs
module FBHasTooMany2 where

f :: Int 
f x y = x + y
